--- a/features.html
+++ b/features.html
@@ -39,8 +39,9 @@
     <li class="menu_def"><a href="docs.html" name="Documentation">Documentation</a></li>
     <li class="menu_def"><a href="download.html" name="Download">Download</a></li>
     <li class="menu_def"><a href="communication.html" name="Communication">Communication</a></li>
+    <li class="menu_def"><a href="links.html" name="Links">Links</a></li>
 
-    <li class="menu_title">Gna! links</li>
+    <li class="menu_title">relax @ Gna!</li>
     <li class="menu_def"><a href="http://gna.org/projects/relax" name="The Gna! site for the project relax.">The relax project</a></li>
     <li class="menu_def"><a href="http://download.gna.org/relax" name="The Gna! download site for the project relax.">Downloads</a></li>
     <li class="menu_def"><a href="http://gna.org/news/?group=relax" name="The relax news page.">News</a></li>
