--- a/links.html
+++ b/links.html
@@ -13,7 +13,7 @@
 -->
 
 <head>
-  <title>References</title>
+  <title>Links</title>
   <meta name="AUTHOR" content="Edward d'Auvergne">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <link rel="stylesheet" type="text/css" href="relax.css">
