--- a/features.html
+++ b/features.html
@@ -71,7 +71,7 @@
 
     <ul>
      <li>Model-free analysis (<a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982a</a>; <a href="refs.html#LipariSzabo82a">Lipari and Szabo, 1982b</a>; <a href="refs.html#Clore90">Clore et al., 1990</a>)</li>
-     <li>Reduced spectral density mapping (<a href="refs.html#Lefevre96">Lefevre et al., 1996</a>)</li>
+     <li>Reduced spectral density mapping (<a href="refs.html#Farrow95">Farrow et al., 1995</a>, <a href="refs.html#Lefevre96">Lefevre et al., 1996</a>)</li>
      <li>Exponential curve fitting (to find the R<sub>1</sub> and R<sub>2</sub> relaxation rates)</li>
      <li>Steady-state NOE calculation</li>
     </ul>
