--- a/refs.html
+++ b/refs.html
@@ -67,6 +67,7 @@
     <li id=dAuvergneGooley03>d'Auvergne, E. J. and Gooley, P. R. (2003). The use of model selection in the
 model-free analysis of protein dynamics. <em>J. Biomol. NMR</em>, <strong>25</strong>(1), 25–39.</li>
     <li id=dAuvergneGooley03>d'Auvergne, E. J. and Gooley, P. R. (2006). Model-free model elimination: A new step in the model-free dynamic analysis of NMR relaxation data. <em>J. Biomol. NMR</em>, <strong>35</strong>(2), 117–135.</li>
+    <li id=Farrow95>Farrow, N. A., Zhang, O., Forman-Kay, J. D., Kay, L. E. (1995).  Comparison of the backbone dynamics of a folded and an unfolded SH3 domain existing in equilibrium in aqueous buffer. <em>Biochem.</em>, <strong>34</strong>(3), 868-878.</li>
     <li id=Lefevre96>Lefevre, J. F., Dayie, K. T., Peng, J. W., and Wagner, G. (1996). Internal mobility in the partially folded DNA binding and dimerization domains of GAL4: NMR analysis of the N-H spectral density functions. <em>Biochem.</em>, <strong>35</strong>(8), 2674–2686.</li>
     <li id=LipariSzabo82a>Lipari, G. and Szabo, A. (1982a). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules I. Theory and range of validity. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4546–4559.</li>
     <li id=LipariSzabo82b>Lipari, G. and Szabo, A. (1982b). Model-free approach to the interpretation of nuclear magnetic-resonance relaxation in macromolecules II. Analysis of experimental results. <em>J. Am. Chem. Soc.</em>, <strong>104</strong>(17), 4559–4570.</li>
