Changed all the "name" attributes to "title", as they should be.

--- a/communication.html
+++ b/communication.html
@@ -34,27 +34,27 @@
     <li class="menu_header">The relax menu</li>
 
     <li class="menu_title">relax</li>
-    <li class="menu_def"><a href="http://nmr-relax.com" name="Main page">Main page</a></li>
-    <li class="menu_def"><a href="features.html" name="Program features">Features</a></li>
-    <li class="menu_def"><a href="docs.html" name="Documentation">Documentation</a></li>
-    <li class="menu_def"><a href="download.html" name="Download">Download</a></li>
-    <li class="menu_def"><a href="communication.html" name="Communication">Communication</a></li>
-    <li class="menu_def"><a href="links.html" name="Links">Links</a></li>
+    <li class="menu_def"><a href="http://nmr-relax.com" title="Main page">Main page</a></li>
+    <li class="menu_def"><a href="features.html" title="Program features">Features</a></li>
+    <li class="menu_def"><a href="docs.html" title="Documentation">Documentation</a></li>
+    <li class="menu_def"><a href="download.html" title="Download">Download</a></li>
+    <li class="menu_def"><a href="communication.html" title="Communication">Communication</a></li>
+    <li class="menu_def"><a href="links.html" title="Links">Links</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
-    <li class="menu_def"><a href="http://gna.org/projects/relax" name="The Gna! site for the project relax.">The relax project</a></li>
-    <li class="menu_def"><a href="http://download.gna.org/relax" name="The Gna! download site for the project relax.">Downloads</a></li>
-    <li class="menu_def"><a href="http://gna.org/news/?group=relax" name="The relax news page.">News</a></li>
-    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" name="The relax bug tracker.">Bug tracker</a></li>
-    <li class="menu_def"><a href="http://gna.org/task/?group=relax" name="The relax task tracker.">Tasks</a></li>
-    <li class="menu_def"><a href="http://gna.org/support/?group=relax" name="The relax support request tracker.">Support requests</a></li>
-    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" name="The relax subversion repository.">Source code repository</a></li>
-    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" name="The relax mailing lists.">Mailing lists</a></li>
-    <li class="menu_def"><a href="http://gna.org" name="The Gna! website.">Gna!</a></li>
+    <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
+    <li class="menu_def"><a href="http://download.gna.org/relax" title="The Gna! download site for the project relax.">Downloads</a></li>
+    <li class="menu_def"><a href="http://gna.org/news/?group=relax" title="The relax news page.">News</a></li>
+    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" title="The relax bug tracker.">Bug tracker</a></li>
+    <li class="menu_def"><a href="http://gna.org/task/?group=relax" title="The relax task tracker.">Tasks</a></li>
+    <li class="menu_def"><a href="http://gna.org/support/?group=relax" title="The relax support request tracker.">Support requests</a></li>
+    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a></li>
+    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" title="The relax mailing lists.">Mailing lists</a></li>
+    <li class="menu_def"><a href="http://gna.org" title="The Gna! website.">Gna!</a></li>
 
     <li class="menu_title">Developers &#038; power users</li>
-    <li class="menu_def"><a href="api/" name="The API documentation.">API documentation</a></li>
-    <li class="menu_def"><a href="devel_platform.html" name="Setting up a development platform.">Development platform setup</a></li>
+    <li class="menu_def"><a href="api/" title="The API documentation.">API documentation</a></li>
+    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform.">Development platform setup</a></li>
 
   </ul>
 </div>
@@ -63,7 +63,7 @@
   <div class="main_box">
     <h1>Bug Tracker</h1>
 
-      <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://gna.org/bugs/?group=relax&func=additem" name="Submit a bug">reported</a> within relax's <a href="https://gna.org/bugs/?group=relax" name="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
+    <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://gna.org/bugs/?group=relax&func=additem" title="Submit a bug">reported</a> within relax's <a href="https://gna.org/bugs/?group=relax" title="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
   </div>
 
   <div id="mailing-lists" class="main_box">
