--- a/download.html
+++ b/download.html
@@ -34,27 +34,27 @@
     <li class="menu_header">The relax menu</li>
 
     <li class="menu_title">relax</li>
-    <li class="menu_def"><a href="http://nmr-relax.com" name="Main page">Main page</a></li>
-    <li class="menu_def"><a href="features.html" name="Program features">Features</a></li>
-    <li class="menu_def"><a href="docs.html" name="Documentation">Documentation</a></li>
-    <li class="menu_def"><a href="download.html" name="Download">Download</a></li>
-    <li class="menu_def"><a href="communication.html" name="Communication">Communication</a></li>
-    <li class="menu_def"><a href="links.html" name="Links">Links</a></li>
+    <li class="menu_def"><a href="http://nmr-relax.com" title="Main page">Main page</a></li>
+    <li class="menu_def"><a href="features.html" title="Program features">Features</a></li>
+    <li class="menu_def"><a href="docs.html" title="Documentation">Documentation</a></li>
+    <li class="menu_def"><a href="download.html" title="Download">Download</a></li>
+    <li class="menu_def"><a href="communication.html" title="Communication">Communication</a></li>
+    <li class="menu_def"><a href="links.html" title="Links">Links</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
-    <li class="menu_def"><a href="http://gna.org/projects/relax" name="The Gna! site for the project relax.">The relax project</a></li>
-    <li class="menu_def"><a href="http://download.gna.org/relax" name="The Gna! download site for the project relax.">Downloads</a></li>
-    <li class="menu_def"><a href="http://gna.org/news/?group=relax" name="The relax news page.">News</a></li>
-    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" name="The relax bug tracker.">Bug tracker</a></li>
-    <li class="menu_def"><a href="http://gna.org/task/?group=relax" name="The relax task tracker.">Tasks</a></li>
-    <li class="menu_def"><a href="http://gna.org/support/?group=relax" name="The relax support request tracker.">Support requests</a></li>
-    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" name="The relax subversion repository.">Source code repository</a></li>
-    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" name="The relax mailing lists.">Mailing lists</a></li>
-    <li class="menu_def"><a href="http://gna.org" name="The Gna! website.">Gna!</a></li>
+    <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
+    <li class="menu_def"><a href="http://download.gna.org/relax" title="The Gna! download site for the project relax.">Downloads</a></li>
+    <li class="menu_def"><a href="http://gna.org/news/?group=relax" title="The relax news page.">News</a></li>
+    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" title="The relax bug tracker.">Bug tracker</a></li>
+    <li class="menu_def"><a href="http://gna.org/task/?group=relax" title="The relax task tracker.">Tasks</a></li>
+    <li class="menu_def"><a href="http://gna.org/support/?group=relax" title="The relax support request tracker.">Support requests</a></li>
+    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a></li>
+    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" title="The relax mailing lists.">Mailing lists</a></li>
+    <li class="menu_def"><a href="http://gna.org" title="The Gna! website.">Gna!</a></li>
 
     <li class="menu_title">Developers &#038; power users</li>
-    <li class="menu_def"><a href="api/" name="The API documentation.">API documentation</a></li>
-    <li class="menu_def"><a href="devel_platform.html" name="Setting up a development platform.">Development platform setup</a></li>
+    <li class="menu_def"><a href="api/" title="The API documentation.">API documentation</a></li>
+    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform.">Development platform setup</a></li>
 
   </ul>
 </div>
@@ -66,7 +66,7 @@
     <div class="main_h2">
       <h2>GNU/Linux</h2>
 
-        <p>The current pre-compiled binary release for GNU/Linux on i686 machines can be downloaded from <a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" name="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a>.  The GPG signature can be found at <a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2.sig" name="relax GPG signature">relax-1.2.9.GNU-Linux.i686.tar.bz2.sig</a> (see the Security section below).  For all other architectures please download the source release below.</p>
+      <p>The current pre-compiled binary release for GNU/Linux on i686 machines can be downloaded from <a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a>.  The GPG signature can be found at <a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">relax-1.2.9.GNU-Linux.i686.tar.bz2.sig</a> (see the Security section below).  For all other architectures please download the source release below.</p>
 
         <h3>Dependencies</h3>
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
@@ -79,7 +79,7 @@
 
     <div class="main_h2">
       <h2>MS Windows</h2>
-        <p>The pre-compiled binary release for Windows (32 bit) can be downloaded from <a href='http://download.gna.org/relax/relax-1.2.9.Win32.zip'>relax-1.2.9.Win32.zip</a>.  The GPG signature is located at <a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip.sig" name="relax GPG signature">relax-1.2.9.Win32.zip.sig</a> (see the Security section below).  For 64 bit Windows please download the source release below.</p>
+      <p>The pre-compiled binary release for Windows (32 bit) can be downloaded from <a href='http://download.gna.org/relax/relax-1.2.9.Win32.zip'>relax-1.2.9.Win32.zip</a>.  The GPG signature is located at <a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip.sig" title="relax GPG signature">relax-1.2.9.Win32.zip.sig</a> (see the Security section below).  For 64 bit Windows please download the source release below.</p>
 
         <h3>Dependencies</h3>
           <ul class="main_ul">
@@ -120,13 +120,13 @@
     </tr>
     <tr>
       <td>Bzip2 compressed TAR file</td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2" name="relax">relax-1.2.9.src.tar.bz2</a></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2.sig" name="relax GPG signature">relax-1.2.9.src.tar.bz2.sig</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2" title="relax">relax-1.2.9.src.tar.bz2</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2.sig" title="relax GPG signature">relax-1.2.9.src.tar.bz2.sig</a></td>
     </tr>
     <tr>
       <td>Zip file</td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip" name="relax">relax-1.2.9.src.zip</a></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip.sig" name="relax GPG signature">relax-1.2.9.src.zip.sig</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip" title="relax">relax-1.2.9.src.zip</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip.sig" title="relax GPG signature">relax-1.2.9.src.zip.sig</a></td>
     </tr>
   </tbody>
 </table>
@@ -164,27 +164,27 @@
       <td><strong>File size (bytes)</strong></td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" name="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a></td>
+        <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.9.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>f719cc0a9fd8b710e28d1c2a5d597aa7</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2.sig" name="relax GPG signature">signature</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>3622068</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip" name="relax">relax-1.2.9.Win32.zip</a></td>
+        <td><a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip" title="relax">relax-1.2.9.Win32.zip</a></td>
       <td><tt><small>f14a2a03db3ab3128d1072b5a936f875</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip.sig" name="relax GPG signature">signature</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.Win32.zip.sig" title="relax GPG signature">signature</a></td>
       <td>3891094</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2" name="relax">relax-1.2.9.src.tar.bz2</a></td>
+        <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2" title="relax">relax-1.2.9.src.tar.bz2</a></td>
       <td><tt><small>84b0835e1ae2dd885b644bf28433e2c2</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2.sig" name="relax GPG signature">signature</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
       <td>3620029</td>
     </tr>
     <tr>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip" name="relax">relax-1.2.9.src.zip</a></td>
+        <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip" title="relax">relax-1.2.9.src.zip</a></td>
       <td><tt><small>49891e4aba642a1b7caf05f0f16a54f8</small></tt></td>
-      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip.sig" name="relax GPG signature">signature</a></td>
+      <td><a href="http://download.gna.org/relax/relax-1.2.9.src.zip.sig" title="relax GPG signature">signature</a></td>
       <td>3838688</td>
     </tr>
   </tbody>
@@ -196,7 +196,7 @@
 <div class="main_box">
     <h1>Security</h1>
 
-      <p>To check that the file hasn't been compromised, firstly download the GPG signature for the distribution package.  Then to test this signature, download the relax <a href="https://gna.org/project/memberlist-gpgkeys.php?group=relax" name="relax GPG public key">public key</a> and run the command:</p>
+    <p>To check that the file hasn't been compromised, firstly download the GPG signature for the distribution package.  Then to test this signature, download the relax <a href="https://gna.org/project/memberlist-gpgkeys.php?group=relax" title="relax GPG public key">public key</a> and run the command:</p>
 
       <p><em>> gpg --verify --default-key relax relax-x.x.x.release_type.file_type.sig</em></p>
 
