--- a/docs.html
+++ b/docs.html
@@ -34,27 +34,27 @@
     <li class="menu_header">The relax menu</li>
 
     <li class="menu_title">relax</li>
-    <li class="menu_def"><a href="http://nmr-relax.com" name="Main page">Main page</a></li>
-    <li class="menu_def"><a href="features.html" name="Program features">Features</a></li>
-    <li class="menu_def"><a href="docs.html" name="Documentation">Documentation</a></li>
-    <li class="menu_def"><a href="download.html" name="Download">Download</a></li>
-    <li class="menu_def"><a href="communication.html" name="Communication">Communication</a></li>
-    <li class="menu_def"><a href="links.html" name="Links">Links</a></li>
+    <li class="menu_def"><a href="http://nmr-relax.com" title="Main page">Main page</a></li>
+    <li class="menu_def"><a href="features.html" title="Program features">Features</a></li>
+    <li class="menu_def"><a href="docs.html" title="Documentation">Documentation</a></li>
+    <li class="menu_def"><a href="download.html" title="Download">Download</a></li>
+    <li class="menu_def"><a href="communication.html" title="Communication">Communication</a></li>
+    <li class="menu_def"><a href="links.html" title="Links">Links</a></li>
 
     <li class="menu_title">relax @ Gna!</li>
-    <li class="menu_def"><a href="http://gna.org/projects/relax" name="The Gna! site for the project relax.">The relax project</a></li>
-    <li class="menu_def"><a href="http://download.gna.org/relax" name="The Gna! download site for the project relax.">Downloads</a></li>
-    <li class="menu_def"><a href="http://gna.org/news/?group=relax" name="The relax news page.">News</a></li>
-    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" name="The relax bug tracker.">Bug tracker</a></li>
-    <li class="menu_def"><a href="http://gna.org/task/?group=relax" name="The relax task tracker.">Tasks</a></li>
-    <li class="menu_def"><a href="http://gna.org/support/?group=relax" name="The relax support request tracker.">Support requests</a></li>
-    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" name="The relax subversion repository.">Source code repository</a></li>
-    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" name="The relax mailing lists.">Mailing lists</a></li>
-    <li class="menu_def"><a href="http://gna.org" name="The Gna! website.">Gna!</a></li>
+    <li class="menu_def"><a href="http://gna.org/projects/relax" title="The Gna! site for the project relax.">The relax project</a></li>
+    <li class="menu_def"><a href="http://download.gna.org/relax" title="The Gna! download site for the project relax.">Downloads</a></li>
+    <li class="menu_def"><a href="http://gna.org/news/?group=relax" title="The relax news page.">News</a></li>
+    <li class="menu_def"><a href="https://gna.org/bugs/?group=relax" title="The relax bug tracker.">Bug tracker</a></li>
+    <li class="menu_def"><a href="http://gna.org/task/?group=relax" title="The relax task tracker.">Tasks</a></li>
+    <li class="menu_def"><a href="http://gna.org/support/?group=relax" title="The relax support request tracker.">Support requests</a></li>
+    <li class="menu_def"><a href="http://gna.org/svn/?group=relax" title="The relax subversion repository.">Source code repository</a></li>
+    <li class="menu_def"><a href="http://gna.org/mail/?group=relax" title="The relax mailing lists.">Mailing lists</a></li>
+    <li class="menu_def"><a href="http://gna.org" title="The Gna! website.">Gna!</a></li>
 
     <li class="menu_title">Developers &#038; power users</li>
-    <li class="menu_def"><a href="api/" name="The API documentation.">API documentation</a></li>
-    <li class="menu_def"><a href="devel_platform.html" name="Setting up a development platform.">Development platform setup</a></li>
+    <li class="menu_def"><a href="api/" title="The API documentation.">API documentation</a></li>
+    <li class="menu_def"><a href="devel_platform.html" title="Setting up a development platform.">Development platform setup</a></li>
 
   </ul>
 </div>
@@ -86,9 +86,9 @@
   <div class="main_h2">
     <h2>The manual</h2>
 
-      <p>Finally, the best source of information is the current version of the <a href="http://download.gna.org/relax/manual/relax.pdf" name="The relax manual">the relax manual</a> which comes with relax and is formatted as a PDF.</p>
+    <p>Finally, the best source of information is the current version of the <a href="http://download.gna.org/relax/manual/relax.pdf" title="The relax manual">the relax manual</a> which comes with relax and is formatted as a PDF.</p>
 
-      <p>The manual has also been converted into a <a href="manual/relax.html" name="The relax manual (HTML version)">HTML version</a> which can be browsed on-line.  This version is, however, inferior in quality in comparison to the original PDF.</p>
+    <p>The manual has also been converted into a <a href="manual/relax.html" title="The relax manual (HTML version)">HTML version</a> which can be browsed on-line.  This version is, however, inferior in quality in comparison to the original PDF.</p>
 
       <p>You can also search the HTML version of the manual using the Google search tool.</p>
 
