Changed the "IMG" element to "img".
This is because the W3C Markup Validator (http://validator.w3.org) flagged it as an error.

--- a/docs.html
+++ b/docs.html
@@ -22,7 +22,7 @@
 <body>
 
 <div class="header_image">
-  <a href="http://gna.org/projects/relax" name="relax" type="image/png" border="0"><IMG src="relax_logo.png" width="200" height="84" align="center" border="0" id="image"></a>
+  <a href="http://gna.org/projects/relax" name="relax" type="image/png" border="0"><img src="relax_logo.png" width="200" height="84" align="center" border="0" id="image"></a>
 </div>
 
 <div class="header">
@@ -100,7 +100,7 @@
     <tr>
       <td>
         <A HREF="http://www.google.com/">
-        <IMG SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" ALT="Google"></A>
+        <img SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" ALT="Google"></A>
       </td>
       <td>
         <INPUT TYPE=text name=q size=31 maxlength=255 value="">
