--- a/devel_platform.html
+++ b/devel_platform.html
@@ -14,9 +14,9 @@
 
 <head>
   <title>Setting up a development platform</title>
-  <meta name="AUTHOR" content="Edward d'Auvergne">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-  <link rel="stylesheet" type="text/css" href="relax.css">
+  <meta name="AUTHOR" content="Edward d'Auvergne"/>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <link rel="stylesheet" type="text/css" href="relax.css"/>
 </head>
 
 <body>
