--- a/communication.html
+++ b/communication.html
@@ -63,7 +63,7 @@
   <div class="main_box">
     <h1>Bug Tracker</h1>
 
-    <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://gna.org/bugs/?group=relax&func=additem" title="Submit a bug">reported</a> within relax's <a href="https://gna.org/bugs/?group=relax" title="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
+    <p>One of the philosophies in the construction of relax is that if there is something which is not immediately obvious, then that is considered a design bug.  If any flaws in relax are uncovered, including general design flaws, bugs in the code, documentation issues, etc, these can be <a href="https://gna.org/bugs/?group=relax&amp;func=additem" title="Submit a bug">reported</a> within relax's <a href="https://gna.org/bugs/?group=relax" title="Bug tracker">bug tracker</a> system.  Please do not report bugs to personal email addresses or to the mailing lists.</p>
   </div>
 
   <div id="mailing-lists" class="main_box">
