--- a/download.html
+++ b/download.html
@@ -72,7 +72,7 @@
           <p>If they exist, please install your distribution specific packages for the following dependencies.</p>
           <ul class="main_ul">
             <li><a href=http://python.org>Python</a> >= 2.4: <a  href=http://www.python.org/ftp/python/2.4.3/Python-2.4.3.tar.bz2>Python-2.4.3.tar.bz2</a></li>
-            <li><a href=http://numpy.scipy.org>Numeric</a> >= 21: <a href=http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=1351>Sourceforge Numeric download page</a></li>
+            <li><a href=http://numpy.scipy.org>Numeric</a> >= 21: <a href=http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351>Sourceforge Numeric download page</a></li>
             <li><a href=http://starship.python.net/~hinsen/ScientificPython/>Scientific Python</a> >= 2.2: <a href=http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz>ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
     </div>
@@ -84,7 +84,7 @@
         <h3>Dependencies</h3>
           <ul class="main_ul">
             <li><a href=http://python.org>Python</a> >= 2.4: <a href=http://www.python.org/ftp/python/2.4.3/python-2.4.3.msi>python-2.4.3.msi</a></li>
-            <li><a href=http://numpy.scipy.org>Numeric</a> >= 21: <a href=http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=1351>Sourceforge Numeric download page</a></li>
+            <li><a href=http://numpy.scipy.org>Numeric</a> >= 21: <a href=http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351>Sourceforge Numeric download page</a></li>
             <li><a href=http://starship.python.net/~hinsen/ScientificPython/>Scientific Python</a> >= 2.2: <a href=http://sourcesup.cru.fr/frs/download.php/745/ScientificPython-2.4.9.win32-py2.4.exe>ScientificPython-2.4.9.win32-py2.4.exe</a></li>
             <li><a href=http://projects.scipy.org/ipython/ipython/wiki/PyReadline/Intro>pyreadline</a>: <a href=http://ipython.scipy.org/dist/pyreadline-1.3.win32.exe>pyreadline-1.3.win32.exe</a></li>
             <li><a href=http://starship.python.net/crew/theller/ctypes/>ctypes</a> (pyreadline dependency): <a href="http://prdownloads.sourceforge.net/ctypes/ctypes-1.0.0.win32-py2.4.exe?download">ctypes-1.0.0.win32-py2.4.exe</a></li>
@@ -135,7 +135,7 @@
         <h3>Dependencies</h3>
           <ul class="main_ul">
             <li><a href=http://python.org>Python</a> >= 2.4: <a href=http://www.python.org/download/releases/2.4.3/>Python 2.4.3 release page</a></li>
-            <li><a href=http://numpy.scipy.org>Numeric</a> >= 21: <a href=http://sourceforge.net/project/showfiles.php?group_id=1369&package_id=1351>Sourceforge Numeric download page</a></li>
+            <li><a href=http://numpy.scipy.org>Numeric</a> >= 21: <a href=http://sourceforge.net/project/showfiles.php?group_id=1369&amp;package_id=1351>Sourceforge Numeric download page</a></li>
 
             <li><a href=http://starship.python.net/~hinsen/ScientificPython/>Scientific Python</a> >= 2.2: <a href=http://sourcesup.cru.fr/frs/download.php/686/ScientificPython-2.4.11.tar.gz>ScientificPython-2.4.11.tar.gz</a></li>
           </ul>
