Changed all the capitalised attributes and elements of the Google search boxes to lowercase.

--- a/communication.html
+++ b/communication.html
@@ -103,25 +103,25 @@
       <p>The relax mailing lists can be searched using the Google search tool below.  These searches will not find the most recent posts and are dependent on when Google last indexed the mailing lists.</p>
 
       <!-- SiteSearch Google -->
-      <FORM method=GET action="http://www.google.com/search">
+      <form method=GET action="http://www.google.com/search">
       <input type=hidden name=ie value=UTF-8>
       <input type=hidden name=oe value=UTF-8>
-      <TABLE bgcolor="#FFFFFF">
+      <table bgcolor="#FFFFFF">
       <tr>
         <td>
-          <A HREF="http://www.google.com/">
-          <img SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" ALT="Google"></A>
+          <a href="http://www.google.com/">
+          <img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"></a>
         </td>
         <td>
-          <INPUT TYPE=text name=q size=50 maxlength=255 value="">
-          <INPUT type=submit name=btnG VALUE="Google Search">
+          <input type=text name=q size=50 maxlength=255 value="">
+          <input type=submit name=btnG value="Google Search">
           <font size=-1>
           <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-announce"> relax-announce <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-users" checked> relax-users <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-devel"> relax-devel <input type=radio name=sitesearch value="https://mail.gna.org/public/relax-commits"> relax-commits <br>
           </font>
         </td>
       </tr>
-      </TABLE>
-      </FORM>
+      </table>
+      </form>
       <!-- SiteSearch Google -->
   </div>
 </div>
