--- a/docs.html
+++ b/docs.html
@@ -93,25 +93,25 @@
       <p>You can also search the HTML version of the manual using the Google search tool.</p>
 
     <!-- SiteSearch Google -->
-    <FORM method=GET action="http://www.google.com/search">
+    <form method=GET action="http://www.google.com/search">
     <input type=hidden name=ie value=UTF-8>
     <input type=hidden name=oe value=UTF-8>
-    <TABLE bgcolor="#FFFFFF">
+    <table bgcolor="#FFFFFF">
     <tr>
       <td>
-        <A HREF="http://www.google.com/">
-        <img SRC="http://www.google.com/logos/Logo_40wht.gif" border="0" ALT="Google"></A>
+        <a href="http://www.google.com/">
+        <img src="http://www.google.com/logos/Logo_40wht.gif" border="0" alt="Google"></a>
       </td>
       <td>
-        <INPUT TYPE=text name=q size=31 maxlength=255 value="">
-        <INPUT type=submit name=btnG VALUE="Google Search">
+        <input type=text name=q size=31 maxlength=255 value="">
+        <input type=submit name=btnG value="Google Search">
         <font size=-1>
         <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/" checked> relax HTML manual <br>
         </font>
       </td>
     </tr>
-    </TABLE>
-    </FORM>
+    </table>
+    </form>
     <!-- SiteSearch Google -->
   </div>
   <div class="main_h2">
