Changed the "id" attribute values to be enclosed in quotes.

--- a/features.html
+++ b/features.html
@@ -65,7 +65,7 @@
 
    <p></p>
 
-  <div class="main_h2" id=theories>
+  <div class="main_h2" id="theories">
    <h2>Supported NMR theories</h2>
     <p>The following relaxation data analysis techniques are currently supported by relax:</p>
 
@@ -84,7 +84,7 @@
      </ul>
   </div>
 
-  <div class="main_h2" id=tools>
+  <div class="main_h2" id="tools">
    <h2>Data analysis tools</h2>
     <p>The following tools are implemented as modular components to be used by any data analysis technique:</p>
 
@@ -105,7 +105,7 @@
 
   </div>
 
-  <div class="main_h2" id=vis>
+  <div class="main_h2" id="vis">
    <h2>Data visualisation</h2>
     <p>The results of an analysis, or any data input into relax, can be visualised using a number of programs:</p>
 
@@ -116,7 +116,7 @@
     </ul>
   </div>
 
-  <div class="main_h2" id=interface>
+  <div class="main_h2" id="interface">
    <h2>Interfacing with other programs</h2>
     <p>relax can create the input files, execute in-line, and then read the output of the following programs.  These programs can be
 used as optimisation engines replacing the minimisation algorithms built into relax:</p>
@@ -127,7 +127,7 @@ used as optimisation engines replacing the minimisation algorithms built into re
     </ul>
   </div>
 
-  <div class="main_h2" id=UI>
+  <div class="main_h2" id="UI">
    <h2>The user interfaces (UI)</h2>
     <p>relax can be used through the following UIs:</p>
 
