Fixed a broken list.
This problem was found using http://validator.w3.org.

--- a/features.html
+++ b/features.html
@@ -90,7 +90,7 @@
 
     <ul>
      <li>Numerous high-precision optimisation algorithms</li>
-     <li>Model selection (<a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>)</li>
+     <li>Model selection (<a href="refs.html#dAuvergneGooley03">d'Auvergne and Gooley, 2003</a>)
       <ul>
        <li>Akaike's Information Criteria (AIC)</li>
        <li>Small sample size corrected AIC (AICc)</li>
@@ -98,7 +98,7 @@
        <li>Bootstrap model selection</li>
        <li>Single-item-out cross-validation (CV)</li>
        <li>Hypothesis testing ANOVA model selection (only the model-free specific technique of <a href="refs.html#Mandel95">Mandel et al., 1995</a> is supported)</li>
-      </ul>
+      </ul></li>
      <li>Monte Carlo simulations (error analysis for all data analysis techniques)</li>
      <li>Model elimination - the removal of failed models prior to model selection (<a href="refs.html#dAuvergneGooley06">d'Auvergne and Gooley, 2006</a>)</li>
     </ul>
