Fixed all the "img" elements of the links page.
This problem was found using http://validator.w3.org.

--- a/links.html
+++ b/links.html
@@ -74,17 +74,17 @@
       <td><strong>Where to find relax</strong></td>
     </tr>
     <tr>
-      <td><a href="http://gna.org"><img src="images/gnalogo.png" border="0"></a></td>
+      <td><a href="http://gna.org"><img src="images/gnalogo.png" alt="Gna!" class="image"/></a></td>
       <td>Gna! is a central point for the development, distribution and maintenance of Libre Software (Free Software) projects.</td>
       <td>The relax project page at <a href="https://gna.org/projects/relax">https://gna.org/projects/relax</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://mail-archive.com"><img src="images/mail-archive.png" border="0"></a></td>
+      <td><a href="http://mail-archive.com"><img src="images/mail-archive.png" alt="The mail archive" class="image"/></a></td>
       <td>An easy-to-use archiving service for electronic mailing lists.</td>
       <td>The archived relax mailing lists include <a href="http://mail-archive.com/relax-announce@gna.org/">relax-announce</a>, <a href="http://mail-archive.com/relax-users@gna.org/">relax-users</a>, <a href="http://mail-archive.com/relax-devel@gna.org/">relax-devel</a>, and <a href="http://mail-archive.com/relax-commits@gna.org/">relax-commits</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://freshmeat.net"><img src="images/fmlogo.png" border="0"></a></td>
+      <td><a href="http://freshmeat.net"><img src="images/fmlogo.png" alt="Freshmeat" class="image"/></a></td>
       <td>freshmeat is the Web's largest index of Unix and cross-platform software (mainly open source).</td>
       <td>The nmr-relax default branch <a href="http://freshmeat.net/projects/nmr-relax">http://freshmeat.net/projects/nmr-relax</a>.</td>
     </tr>
@@ -94,7 +94,7 @@
       <td>The relax real-time open source activity stats page <a href="http://cia.navi.cx/stats/project/relax">http://cia.navi.cx/stats/project/relax</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://linuxlinks.com"><img src="images/linuxlinks.png" border="0"></a></td>
+      <td><a href="http://linuxlinks.com"><img src="images/linuxlinks.png" alt="LinuxLinks" class="image"/></a></td>
       <td>LinuxLinks.com is a website listing many Linux software projects.</td>
       <td>On the <a href="http://linuxlinks.com/Software/">Software</a> : <a href="http://linuxlinks.com/Software/Scientific/">Scientific</a> : <a href="http://linuxlinks.com/Software/Scientific/Biology/">Biology</a> : <a href="http://linuxlinks.com/Software/Scientific/Biology/Proteins/">Proteins</a> page.</td>
     </tr>
