Enclosed the "cia_sitename" class attribute in quotes.
This problem was found using http://validator.w3.org.

--- a/links.html
+++ b/links.html
@@ -89,7 +89,7 @@
       <td>The nmr-relax default branch <a href="http://freshmeat.net/projects/nmr-relax">http://freshmeat.net/projects/nmr-relax</a>.</td>
     </tr>
     <tr>
-      <td><a href="http://cia.navi.cx" class=cia_sitename>CIA</a></td>
+      <td><a href="http://cia.navi.cx" class="cia_sitename">CIA</a></td>
       <td>The open source informant.  CIA tracks open source projects in real-time.</td>
       <td>The relax real-time open source activity stats page <a href="http://cia.navi.cx/stats/project/relax">http://cia.navi.cx/stats/project/relax</a>.</td>
     </tr>
