Fixed a number of lists.
These problems were found using http://validator.w3.org.

--- a/windows_devel.html
+++ b/windows_devel.html
@@ -67,65 +67,65 @@
 
 <!-- Menu -->
    <ul>
-    <li><a href="#scons">1. SCons</a></li>
+    <li><a href="#scons">1. SCons</a>
     <ul>
      <li><a href="#scons_why">1.1 Why install?</a></li>
      <li><a href="#scons_download">1.2 Download</a></li>
      <li><a href="#scons_install">1.3 Installation</a></li>
-    </ul>
+    </ul></li>
 
-    <li><a href="#MSVS">2. MS Visual C++ 2005 Express Edition</a></li>
+    <li><a href="#MSVS">2. MS Visual C++ 2005 Express Edition</a>
     <ul>
      <li><a href="#MSVS_why">2.1 Why install?</a></li>
      <li><a href="#MSVS_download">2.2 Download</a></li>
      <li><a href="#MSVS_install">2.3 Installation</a></li>
-     <li><a href="#MSVS_probs">2.4 relax module compilation problems</a></li>
+     <li><a href="#MSVS_probs">2.4 relax module compilation problems</a>
      <ul>
       <li><a href="#MSVS_python_issues">2.4.1 Python issues</a></li>
       <li><a href="#MSVS_scons_issues">2.4.2 SCons issues</a></li>
-     </ul>
-    </ul>
+     </ul></li>
+    </ul></li>
 
-    <li><a href="#svn">3. Subversion</a></li>
+    <li><a href="#svn">3. Subversion</a>
     <ul>
      <li><a href="#svn_why">3.1 Why install?</a></li>
      <li><a href="#svn_download">3.2 Download</a></li>
      <li><a href="#svn_install">3.3 Installation</a></li>
-    </ul>
+    </ul></li>
 
-    <li><a href="#vim">4. Vim</a></li>
+    <li><a href="#vim">4. Vim</a>
     <ul>
      <li><a href="#vim_why">4.1 Why install?</a></li>
      <li><a href="#vim_download">4.2 Download</a></li>
      <li><a href="#vim_install">4.3 Installation</a></li>
      <li><a href="#vim_post_install">4.4 Post-install</a></li>
-    </ul>
+    </ul></li>
 
-    <li><a href="#LaTeX">5. LaTeX</a></li>
+    <li><a href="#LaTeX">5. LaTeX</a>
     <ul>
      <li><a href="#LaTeX_why">5.1 Why install?</a></li>
      <li><a href="#LaTeX_download">5.2 Download</a></li>
-     <li><a href="#LaTeX_install">5.3 Installation</a></li>
+     <li><a href="#LaTeX_install">5.3 Installation</a>
      <ul>
       <li><a href="#LaTeX_extract">5.3.1 File extraction and the PDF file</a></li>
       <li><a href="#LaTeX_miktex">5.3.2 LaTeX installation</a></li>
       <li><a href="#LaTeX_gs">5.3.3 Ghostscript installation</a></li>
       <li><a href="#LaTeX_gsview">5.3.4 GSView installation</a></li>
-     </ul>
-    </ul>
+     </ul></li>
+    </ul></li>
 
-    <li><a href="#gpg">6. GnuPG</a></li>
+    <li><a href="#gpg">6. GnuPG</a>
     <ul>
      <li><a href="#gpg_why">6.1 Why install?</a></li>
      <li><a href="#gpg_download">6.2 Download</a></li>
      <li><a href="#gpg_install">6.3 Installation</a></li>
      <li><a href="#gpg_post_install">6.4 Post-install</a></li>
-    </ul>
+    </ul></li>
 
-    <li><a href="#path">7. Modifying the system path</a></li>
+    <li><a href="#path">7. Modifying the system path</a>
     <ul>
      <li><a href="#path_xp">7.1 The MS Windows XP system path</a></li>
-    </ul>
+    </ul></li>
 
    </ul>
  </div>
@@ -217,21 +217,29 @@
 
       <ul class="code_ul">
        <li>K &#061; 'Software\\Microsoft\\VisualStudio\\' &#043; str(version_num)</li>
-       <li>if (version_num &#062;&#061; 8.0):</li>
-       <ul class="code_ul"><li>try:</li>
-        <ul class="code_ul"><li>SCons.Util.RegOpenKeyEx(SCons.Util.HKEY_LOCAL_MACHINE, K )</li></ul>
-       </ul>
-       <ul class="code_ul"><li>except SCons.Util.RegError:</li>
-        <ul class="code_ul"><li>K &#061; 'Software\\Microsoft\\VCExpress\\' &#043; str(version_num)</li></ul>
-       </ul>
+       <li>if (version_num &#062;&#061; 8.0):
+       <ul class="code_ul">
+        <li>try:
+        <ul class="code_ul">
+         <li>SCons.Util.RegOpenKeyEx(SCons.Util.HKEY_LOCAL_MACHINE, K )</li>
+        </ul></li>
+       </ul></li>
+       <li><ul class="code_ul">
+        <li>except SCons.Util.RegError:
+        <ul class="code_ul">
+         <li>K &#061; 'Software\\Microsoft\\VCExpress\\' &#043; str(version_num)</li>
+        </ul></li>
+       </ul></li>
       </ul>
 
       <p>to</p>
 
       <ul class="code_ul">
        <li>K &#061; 'Software\\Microsoft\\VisualStudio\\' &#043; str(version_num)</li>
-       <li>if (version_num &#062;&#061; 8.0):</li>
-       <ul class="code_ul"><li>K &#061; 'Software\\Microsoft\\VCExpress\\' &#043; str(version_num)</li></ul>
+       <li>if (version_num &#062;&#061; 8.0):
+        <ul class="code_ul">
+         <li>K &#061; 'Software\\Microsoft\\VCExpress\\' &#043; str(version_num)</li>
+        </ul></li>
       </ul>
 
    </div>
