Updated the download page for relax version 1.3.0.

--- a/download.html
+++ b/download.html
@@ -151,9 +151,10 @@
           <p>The <a href="devel_platform.html">development platform</a> is required for compiling the C modules through <a href="http://www.scons.org/">SCons</a>, for compiling the LaTeX manual, and generating relax distribution packages.</p>
 
    </div>
+  </div>
 
-    <div class="main_h2">
-      <h2>All files</h2>
+<div class="main_box">
+      <h1>All current releases</h1>
 
 <table cellspacing="10">
   <tbody>
@@ -163,6 +164,33 @@
       <td><strong>GPG signature</strong></td>
       <td><strong>File size (bytes)</strong></td>
     </tr>
+    <tr><td><em>Unstable 1.3 development line</em></td></tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2" title="relax">relax-1.3.0.GNU-Linux.i686.tar.bz2</a></td>
+      <td><tt><small>1a9b5104e512af0edf8affb95a6d2d94</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.GNU-Linux.i686.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4445951</td>
+    </tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip" title="relax">relax-1.3.0.Win32.zip</a></td>
+      <td><tt><small>b788b38fecee772fe758897a80563205</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.Win32.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4708018</td>
+    </tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2" title="relax">relax-1.3.0.src.tar.bz2</a></td>
+      <td><tt><small>ae89221310d0c2ce84f5235d847f1001</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.tar.bz2.sig" title="relax GPG signature">signature</a></td>
+      <td>4439939</td>
+    </tr>
+    <tr>
+        <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip" title="relax">relax-1.3.0.src.zip</a></td>
+      <td><tt><small>32475228dd4ed201f7dd462f6a001063</small></tt></td>
+      <td><a href="http://download.gna.org/relax/relax-1.3.0.src.zip.sig" title="relax GPG signature">signature</a></td>
+      <td>4735624</td>
+    </tr>
+
+    <tr><td><em>Stable 1.2 line</em></td></tr>
     <tr>
         <td><a href="http://download.gna.org/relax/relax-1.2.10.GNU-Linux.i686.tar.bz2" title="relax">relax-1.2.10.GNU-Linux.i686.tar.bz2</a></td>
       <td><tt><small>7656ede916904ce1962f20d78f70f9b8</small></tt></td>
@@ -189,7 +217,6 @@
     </tr>
   </tbody>
 </table>
-    </div>
   </div>
 
 
