--- a/docs.html
+++ b/docs.html
@@ -106,8 +106,7 @@
         <input type=text name=q size=31 maxlength=255 value="">
         <input type=submit name=btnG value="Google Search">
         <font size=-1>
-        <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual <br>
-        <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/1.3" checked> relax 1.3 HTML manual <br>
+        <input type=hidden name=domains value="YOUR DOMAIN NAME"><br><input type=radio name=sitesearch value=""> WWW <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/1.2" checked> relax 1.2 HTML manual <input type=radio name=sitesearch value="http://www.nmr-relax.com/manual/1.3"> relax 1.3 HTML manual <br>
         </font>
       </td>
     </tr>
